[package]
name = "mstcc"
version = "0.1.0"
authors = ["Marco A L Barbosa <malbarbo@gmail.com>"]

[dependencies]
clap = { version = "2", features = ["wrap_help"], default-features = false }
env_logger = { version = "0.4", default-features = false }
log = "0.3"
rand = "0.3"

[dependencies.fera]
path = "../fera/"
features = ["ext", "fun", "graph"]

[dev-dependencies]
itertools = "0.5"

[profile.release]
lto = true
